--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cosmicwave",
+  "name": "@huement/cosmicwave",
   "version": "0.5.0",
   "type": "module",
   "description": "Lightweight, dependency-free SVG wave templates that dynamically generate themselves on render.",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mzebley/CosmicWave.git"
+    "url": "git+https://github.com/huement/CosmicWave.git"
   },
   "keywords": [
     "javascript",
@@ -30,9 +30,9 @@
   "author": "Derek Scott",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/johnny13/CosmicWave/issues"
+    "url": "https://github.com/huement/CosmicWave/issues"
   },
-  "homepage": "https://CosmicWave.johnny13.com/",
+  "homepage": "https://CosmicWave.huement.com/",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "rollup": "^3.29.4",
